--- a/package.json
+++ b/package.json
@@ -36,6 +36,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/src/index.js"
+    ]
   }
 }
